Kubernetes/apps/prod/helix-ai/policies/peerauthentication-default.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: helix-ai
spec:
  mtls:
    mode: STRICT
