Kubernetes/apps/prod/helix-ai/policies/authorizationpolicy-default.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: helix-namespace-allow
  namespace: helix-ai
spec:
  rules:
    - from:
        - source:
            namespaces:
              - helix-ai
              - istio-system
              - monitoring
