Kubernetes/apps/prod/helix-ai/policies/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: helix-ai
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
